# CompMath

./: CMakeLists.txt  Fifth.cpp  Fourth.cpp  Seventh.cpp  Sixth.cpp  X93.cpp  XI93a.cpp
